Revise welcome message in index.html
Updated the paragraph to include a new message about independence and peace.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <div class="welcome-screen-content">
     <img src="https://noibo.kiengiang.dcs.vn/uploads/news/2023_08/anh-1.jpg" alt="Chủ tịch Hồ Chí Minh đọc Tuyên ngôn Độc lập">
     <h1>Khởi nguồn câu chuyện Hòa bình</h1>
-    <p>Ngày 2/9/1945, tại Quảng trường Ba Đình, Chủ tịch Hồ Chí Minh đã đọc bản Tuyên ngôn Độc lập, khai sinh ra nước Việt Nam Dân chủ Cộng hòa.
-    <br>Hãy lắng nghe âm thanh lịch sử này và bắt đầu viết tiếp trang sử của bạn.</p>
+    <p>Ngày 2/9/1945, tại Quảng trường Ba Đình, Chủ tịch Hồ Chí Minh đã đọc bản Tuyên ngôn Độc lập, khai sinh ra nền <b>Hòa bình Độc lập</b> của dân tộc.
+    <br><br>
+    Dự án này là nơi bạn <b>dùng công nghệ để bày tỏ lòng tri ân và viết tiếp cam kết hòa bình</b> của tuổi trẻ Việt Nam. Hãy lắng nghe âm thanh lịch sử này và bắt đầu hành động.</p>
     <button class="btn" id="startBtn" style="font-size: 18px; padding: 15px 30px;">
       [ Lắng nghe & Bắt đầu ]
     </button>
